--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^37.1.0",
+    "@ckeditor/ckeditor5-react": "^6.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^37.1.0",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
