--- a/front-end-vue/package.json
+++ b/front-end-vue/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^37.1.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "axios": "^1.3.5",
     "daisyui": "^2.51.5",
     "vue": "^3.2.47",
